--- a/201801/20180129/css/style.css
+++ b/201801/20180129/css/style.css
@@ -55,9 +55,9 @@ header {
 header span {
   display: inline-block;
   box-sizing: border-box;
-  width: 4rem;
-  height: 4rem;
-  line-height: 4rem;
+  width: 3rem;
+  height: 3rem;
+  line-height: 3rem;
   margin: 0 0.4rem;
   background: #FFC43D;
 }
@@ -83,7 +83,6 @@ h1 {
 
 .container {
   margin: 0 auto;
-  padding-bottom: 3.5rem;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -93,7 +92,7 @@ h1 {
 }
 header .container {
   padding: 0;
-  padding: 2rem 4rem;
+  padding: 1rem 2rem;
   max-width: 900px;
 }
 
@@ -116,7 +115,7 @@ header .container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 1.8rem;
+  margin: 1rem 1.8rem;
   font-size: 1.2rem;
   line-height: 1;
   color: #555;
@@ -409,7 +408,7 @@ header .container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 .not-recommended * + * {
   margin-left: 10px;
