--- a/201802/20180227/20180227001/css/html5.css
+++ b/201802/20180227/20180227001/css/html5.css
@@ -1,33 +1,33 @@
 .article{
-	color:"#2ecc71";
+	color:#2ecc71
 }
 .aside{
-	color:"#1abc9c";
+	color:#1abc9c
 }
 .dialog{
-	color:"#3498db";
+	color:#3498db
 }
 .figcaption{
-	color:"#9b59b6";
+	color:#9b59b6
 }
 .figure{
-	color:"#34495e";
+	color:#34495e
 }
 .footer{
-	color:"#f1c40f";
+	color:#f1c40f
 }
 .header{
-	color:"#e67e22";
+	color:#e67e22
 }
 .hgroup{
-	color:"#e74c3c";
+	color:#e74c3c
 }
 .main{
-	color:"#ecf0f1";
+	color:#ecf0f1
 }
 .nav{
-	color:"#95a5a6";
+	color:#95a5a6
 }
 .section{
-	color:"#f6e58d";
+	color:#f6e58d
 }
