--- a/201802/20180227/20180227001/css/app/animate.css
+++ b/201802/20180227/20180227001/css/app/animate.css
@@ -41,11 +41,14 @@
 }
 
   .input--dropdown {
-    background-image: url("images/ddown.png");
-    background-image: url("images/ddown.svg?3"), none;
+    background-image: url("../../img/ddown.png");
+    background-image: url("../../img/ddown.svg?3"), none;
     background-repeat: no-repeat;
     background-size: 1.5rem 1rem;
     background-position: right center;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
   }
 
 /*-----------------------------------*\
