--- a/201802/20180227/20180227001/css/app/style.css
+++ b/201802/20180227/20180227001/css/app/style.css
@@ -1,52 +1,67 @@
-#poem{
-	width: 960px;
-	height: 300px;
-	overflow: auto;
-	margin: 0 auto;
+#poem {
+    width: 960px;
+    height: 300px;
+    overflow: auto;
+    margin: 0 auto;
 }
 
 @charset "utf-8";
-ul{padding: 0}
-.pagination a {
-    text-decoration: none;
-	border: 1px solid #AAE;
-	color: #15B;
+ul {
+    padding: 0
 }
 
-.pagination a, .pagination span {
+.pagination a {
+    text-decoration: none;
+    border: 1px solid #AAE;
+    color: #15B;
+}
+
+.pagination a,
+.pagination span {
     display: inline-block;
     padding: 0.1em 0.4em;
     margin-right: 5px;
-	margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .pagination .current {
     background: #26B;
     color: #fff;
-	border: 1px solid #AAE;
+    border: 1px solid #AAE;
 }
 
-.pagination .current.prev, .pagination .current.next{
-	color:#999;
-	border-color:#999;
-	background:#fff;
+.pagination .current.prev,
+.pagination .current.next {
+    color: #999;
+    border-color: #999;
+    background: #fff;
 }
 
-#Searchresult{width:300px; height:100px; padding:20px; background:#f0f3f9;margin: 0 auto}
-
-#myTargetElement em{
-	font-size: 24px;
-	   font-weight: 700;
-	   color: #ed1049;
-	   display: inline-block;
-	   width: 33px;
-	   height: 33px;
-	   line-height: 33px;
-	   border: 2px solid #b57230;
-	   border-radius: 5px;
-	   margin: 0 4px
+#Searchresult {
+    width: 300px;
+    height: 100px;
+    padding: 20px;
+    background: #f0f3f9;
+    margin: 0 auto
 }
 
-#QRCode img{
-	margin: 0 auto;
+#myTargetElement em {
+    font-size: 24px;
+    font-weight: 700;
+    color: #ed1049;
+    display: inline-block;
+    width: 33px;
+    height: 33px;
+    line-height: 33px;
+    border: 2px solid #b57230;
+    border-radius: 5px;
+    margin: 0 4px
+}
+
+#QRCode img {
+    margin: 0 auto;
+}
+
+#QRCode table {
+    margin: 0 auto!important;
 }
