--- a/201802/20180227/20180227001/css/app/style.css
+++ b/201802/20180227/20180227001/css/app/style.css
@@ -69,3 +69,7 @@ ul {
 .center p {
     font-size: 1.5rem;
 }
+
+
+.list_danmu{position:relative;z-index:1;height:160px;width:100%;overflow:hidden;}
+.list_danmu li{font-size:16px;position:absolute;white-space:nowrap;}
