optimizeCss常用配置参数

--- a/requirejs_dev/css/style.css
+++ b/requirejs_dev/css/style.css
@@ -1,4 +1,9 @@
 /*node build/r.js -o cssIn=src/main/webapp/static/css/styles.css out=src/main/webapp/static/css/all.css optimizeCss=standard  */
+/*"standard"：标准的压缩方式；*/
+/*"standard.keepLines"：保留换行；*/
+/*"standard.keepComments"：保留注释；*/
+/*"standard.keepComments.keepLines"：保留换行；*/
+/*"none"：不压缩；*/
 @import url("common/normalize.css");
 @import url("common/animate.css");
 @import url("app/style.css");
