--- a/201804/20180404/css/style.css
+++ b/201804/20180404/css/style.css
@@ -67,12 +67,15 @@
     background-position: -795px -40px;
     background-repeat: no-repeat
 }
-pre{
-    font-size: 35px;
+#appenBox {
     float: left;
+    font-size: 35px;
     margin-left: 30px;
     font-family: 微软雅黑;
 }
 .jsonDataDiv{
     clear: both;
+    font-size: 28px;
+    font-weight: bold;
 }
+.cf:after{display:block; content:'clear'; clear:both; line-height:0; visibility:hidden;}
