--- a/201810/webpack/demo4/src/css/style.css
+++ b/201810/webpack/demo4/src/css/style.css
@@ -1,7 +1,17 @@
+@import "./transform.css";
 * {
     margin: 0;
     padding:0;
 }
 body{
-    background: red;
+    background: #ccc;
+}
+div#div1 {
+    width: 100px;
+    height: 75px;
+    background-color: red;
+    border: 1px solid black;
+    margin: 50px;
+    transform: rotate(-30deg);
+    border-radius: 20px;
 }
