--- a/201810/webpack/demo4/src/css/style.css
+++ b/201810/webpack/demo4/src/css/style.css
@@ -11,6 +11,7 @@ div#div1 {
     height: 75px;
     background-color: red;
     border: 1px solid black;
+    padding: 10px;
     margin: 50px;
     transform: rotate(-30deg);
     border-radius: 20px;
