--- a/201810/webpack/demo4/src/css/transform.css
+++ b/201810/webpack/demo4/src/css/transform.css
@@ -3,6 +3,7 @@ div#div2 {
     height:75px;
     background-color:red;
     border:1px solid black;
+    padding: 10px;
     margin: 50px;
     transform:rotate(30deg);
 }
