--- a/201810/webpack/demo6/src/css/style.css
+++ b/201810/webpack/demo6/src/css/style.css
@@ -1,15 +1,18 @@
-body{
+body {
     background: rgb(162, 175, 162);
     color: white;
 }
-#img1{
+
+#img1 {
     background: url(../img/head10.jpg);
     width: 200px;
     height: 200px;
     background-size: 100% 100%;
     border: 1px solid;
     margin: 10px;
+    display: inline-block
 }
+
 #img2 {
     background: url(../img/head20.jpg);
     width: 200px;
@@ -17,4 +20,13 @@ body{
     background-size: 100% 100%;
     border: 1px solid;
     margin: 10px;
+    display: inline-block
+}
+
+.images {
+    margin: 10px;
+    border: 1px solid;
+    width: 200px;
+    height: 200px;
+    display: inline-block;
 }
